# CleanMacProAI

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/: WORKFLOW.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  default.toml
src-tauri/src/: main.rs
src-tauri/src/commands/: cleaner.rs  mod.rs  scanner.rs  system.rs  uninstaller.rs
src-tauri/src/core_engine/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/rules/: cleanup_rules.yaml  mod.rs
src/components/: Sidebar.vue
src/lib/: demoData.ts
src/stores/: scanner.ts
src/views/: DashboardView.vue  ScannerView.vue  SettingsView.vue  UninstallerView.vue
